--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,17 +23,15 @@ jobs:
       
     - name: Build Docker image
       run: |
-        docker build -t your-dockerhub-username/your-app-name:latest .
-        docker build -t your-dockerhub-username/your-app-name:$(git rev-parse --short HEAD) .
+        #docker build -t ikarimovkh/exercise1:latest .
+        docker build -t ikarimovkh/exercise1:$(git rev-parse --short HEAD) .
       
     - name: Push Docker image to DockerHub
       uses: docker/build-push-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: your-dockerhub-username/your-app-name
-        tags: latest, $(git rev-parse --short HEAD)
+        repository: ikarimovkh/exercise1
+        tags: $(git rev-parse --short HEAD)
       
-    - name: Run Docker container
-      run: docker run -p 3000:3000 your-dockerhub-username/your-app-name:latest
-
+    
