--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Build Docker image
       run: |
         #docker build -t ikarimovkh/exercise1:latest .
-        docker build -t ikarimovkh/exercise1:$(git rev-parse --short HEAD) .
+        docker build -t ikarimovkh/exercise1:latest .
       
     - name: Push Docker image to DockerHub
       uses: docker/build-push-action@v2
@@ -32,6 +32,6 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         repository: ikarimovkh/exercise1
-        tags: $(git rev-parse --short HEAD)
+        tags: latest
       
     
