--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,24 +1,21 @@
-name: ci
+name: cd
+
 on:
   push:
     branches:
-      - main  # Adjust the branch as needed
+      - main
 
 jobs:
   deploy:
-    runs-on: self-hosted
+    runs-on: self-hosted  # Use your self-hosted runner here
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
       - name: Pull Docker Image
-        run: docker pull ikarimovkh/exercise:latest
+        run: docker pull your-dockerhub-username/your-image:latest
 
-      - name: Stop Previous Container (if exists)
-        run: docker stop exercise || true
-
-      - name: Remove Previous Container (if exists)
-        run: docker rm exercise1 || true
+      - name: Stop and Remove Existing Container
+        run: |
+          docker stop your-container-name || true
+          docker rm your-container-name || true
 
       - name: Run Docker Container
-        run: docker run -d --name exercise1 -p 3000:3000 ikarimovkh/exercise1:latest
+        run: docker run -d --name your-container-name -p 3000:3000 ikarimovkh/exercise1:latest
