--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,21 +1,18 @@
 name: cd
 
 on:
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflows: ["ci"]
+    types:
+      - completed
 
 jobs:
   deploy:
-    runs-on: self-hosted  # Use your self-hosted runner here
+    runs-on: self-hosted
+
     steps:
-      - name: Pull Docker Image
+      - name: Download Docker Image
         run: docker pull ikarimovkh/exercise1:latest
 
-      - name: Stop and Remove Existing Container
-        run: |
-          docker stop your-container-name || true
-          docker rm your-container-name || true
-
-      - name: Run Docker Container
-        run: docker run -d --name your-container-name -p 3000:3000 ikarimovkh/exercise1:latest
+      - name: Run Container
+        run: docker run -d -p 3000:8080 ikarimovkh/exercise1:latest
