--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,18 +1,29 @@
-name: cd
+name: CD
 
 on:
-  workflow_run:
-    workflows: ["ci"]
-    types:
-      - completed
+  push:
+    branches:
+      - main
 
 jobs:
   deploy:
-    runs-on: self-hosted
-
+    runs-on: ubuntu-latest
+    
     steps:
-      - name: Download Docker Image
-        run: docker pull ikarimovkh/exercise1:latest
-
-      - name: Run Container
-        run: docker run -d -p 3000:8080 ikarimovkh/exercise1:latest
+    - name: Checkout code
+      uses: actions/checkout@v2
+      
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+      
+    - name: Pull Docker image from DockerHub
+      run: docker pull ikarimovkh/exercise1:latest
+      
+    - name: Stop existing container (if any)
+      run: |
+        docker stop exercise1 || true
+        docker rm exercise1 || true
+      
+    - name: Run Docker container
+      run: |
+        docker run -d --name exercise1 -p 3000:3000 ikarimovkh/exercise1:latest
