--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,8 +1,34 @@
+name: ci/cd Sequence
+
+on:
+  push:
+    branches:
+      - main
+
 jobs:
-  build:
-  deploy:
-    needs: build
+  ci-cd-sequence:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Deploy to Production
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      # Run CI job
+      - name: CI
+        uses: ./.github/workflows/ci.yml
+
+      # Run CD job if CI job succeeds
+      - name: CD
+        if: success()
         uses: ./.github/workflows/cd.yml
+
+      # Handle failure
+      - name: Handle Failures
+        if: failure()
+        run: |
+          echo "$(date +'%Y-%m-%d %H:%M:%S') - CI/CD job failed in repository $GITHUB_REPOSITORY" >> failure_log.txt
+
+      # Ensure web app accessibility
+      - name: Ensure Web App Accessibility
+        run: |
+          # Add your command to ensure web app accessibility on port 3000
