--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -15,16 +15,12 @@ jobs:
 
       # Run CI job
       - name: CI
-        run: |
-          cd .github/workflows
-          bash ci.yml
+        uses: ./.github/workflows/ci.yml
 
       # Run CD job if CI job succeeds
       - name: CD
         if: success()
-        run: |
-          cd .github/workflows
-          bash cd.yml
+        uses: ./.github/workflows/cd.yml
 
       # Handle failure
       - name: Handle Failures
