--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -14,11 +14,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run CI
-        uses: ./.github/workflows/ci.yml
+        needs: ./.github/workflows/ci.yml
 
       - name: Run CD
         if: success()
-        uses: ./.github/workflows/cd.yml
+        needs: ./.github/workflows/cd.yml
 
       - name: Handle Failures
         if: failure()
